envoy/envoy-config/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: http_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/login"
                route:
                  cluster: login_cluster
              - match:
                  prefix: "/health"
                route:
                  cluster: login_cluster
              - match:
                  prefix: "/protected"
                route:
                  cluster: login_cluster
              - match:
                  prefix: "/register"
                route:
                  cluster: login_cluster
              - match:
                  prefix: "/users"
                route:
                  cluster: user_cluster
              - match:
                  prefix: "/teams"
                route:
                  cluster: team_cluster
              - match:
                  prefix: "/notes"
                route:
                  cluster: note_cluster
              - match:
                  prefix: "/tasks"
                route:
                  cluster: task_cluster
              - match:
                  prefix: "/"
                route:
                  cluster: login_cluster
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                jwt_provider:
                  issuer: "task-manager"
                  local_jwks:
                    inline_string: '{"keys":[{"kty":"RSA","n":"xVoCvt89T3_uOHH2Q_mSlaEXw8tXK8sTTIveqiqdm_zKZAsu_0cqRoN0q4Wqlic1VPal91G_OGsAK1EmrDcQH4DVffIliN39IivA0ryGRGsGu30xoP4E4a4DWqkP2OaMZawra7kWi_wniyp_uF-ikDwFsyr5gJl5dpad7pA1pSZcKdiYQ82baiqYUiDTch_TV-e-qdj-ckFIC7aYMpkaSIjB9QieZQNd9RcvYLSU801j4tywUtk_8onh08QP0A63ydhdePZqaIfGlF1n0BiE6de2MAONSlmLR6PaTVw99PLNtp0pisCsVec2hsY7NtP50KvvwQvYmqiU8-2hLDbwZQ","e":"AQAB","alg":"RS256","use":"sig","kid":"1"}]}'
                  forward: true
                  payload_in_metadata: "jwt_payload"
                  from_headers:
                    - name: Authorization
                      value_prefix: "Bearer "
              rules:
              - match: 
                  prefix: "/register"
                requires:
                  allow_missing: {}
              - match: 
                  prefix: "/login"
                requires:
                  allow_missing: {}
              - match:
                  safe_regex:
                    regex: ".*/docs.*"
                requires:
                  allow_missing: {}
              - match:
                  safe_regex:
                    regex: ".*/apispec\\.json.*"
                requires:
                  allow_missing: {}
              - match:
                  safe_regex:
                    regex: ".*/flasgger_static.*"
                requires:
                  allow_missing: {}
              - match:
                  prefix: "/"
                requires:
                  provider_name: "jwt_provider"
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              inline_code: |
                function envoy_on_request(request_handle)
                  local meta = request_handle:streamInfo():dynamicMetadata():get("envoy.filters.http.jwt_authn")
                  if meta and meta["jwt_payload"] then
                    local payload = meta["jwt_payload"]
                    if payload["user"] then
                      request_handle:headers():add("X-User", payload["user"])
                    end
                    if payload["sub"] then
                      request_handle:headers():add("X-Subject", payload["sub"])
                    end
                  end
                end
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  - name: http_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/pgadmin"
                route:
                  cluster: pgadmin_cluster
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: login_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: login_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: login-service.default.svc.cluster.local
                port_value: 8080
    lb_policy: ROUND_ROBIN
  - name: user_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: user_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: user-service.default.svc.cluster.local
                port_value: 8080
    lb_policy: ROUND_ROBIN
  - name: team_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: team_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: team-service.default.svc.cluster.local
                port_value: 8080
    lb_policy: ROUND_ROBIN
  - name: note_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: note_cluster
      endpoints:
      - lb_endpoints:
        - endpoint: 
            address:
              socket_address:
                address: note-service.default.svc.cluster.local
                port_value: 8080
    lb_policy: ROUND_ROBIN
  - name: task_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: task_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: task-service.default.svc.cluster.local
                port_value: 8080
    lb_policy: ROUND_ROBIN
  - name: pgadmin_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: pgadmin_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: pgadmin-service.default.svc.cluster.local
                port_value: 8080
    lb_policy: ROUND_ROBIN
